# opengl3dmodel

./: .gitignore  CMakeLists.txt  README.md
models/: Audi_R8_2017.mtl
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: ModelLoader.h  main.cpp
